@@ -1,4 +1,5 @@
 0.7.2
+Fixed d&d within document.
 Added local themes ( ~/.KKEditQT/themes ).
 Fixed changing theme in prefs.
 Set visual insertion point for drag and drop on doc.
